--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start": "vite --host"
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.52.0",
